--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,19 @@
 
+<div class="container">
+  <app-navi></app-navi>
+  <div class="row">
+    <div class="col-md-3">
+      <app-brand></app-brand>
 
-<!-- <ul>
-  <li *ngFor="let car of cars">{{car.carName}}</li>
+    </div>
+    
+    <div class="col-md-9">
+      <app-car></app-car>
 
 
-</ul> -->
-<app-navi></app-navi>
-<app-brand></app-brand>
-<app-car></app-car>
-<router-outlet></router-outlet>
+    </div>
+  </div>
+
+  <router-outlet></router-outlet>
+</div>
+
