--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,11 +1,13 @@
 <table class="table"> 
     <tr *ngFor="let car of cars">
         <td>{{car.carId}}</td>
-        <td>{{car.carName}}</td>
         <td>{{car.brandId}}</td>
-        <td>{{car.unitPrice}}</td>
-
-       
+        <td>{{car.colorId}}</td>
+        <td>{{car.carName}}</td>
+        <td>{{car.modelYear}}</td>
+        <td>{{car.dailyPrice}}</td>
+        <td>{{car.description}}</td>
+        <td>{{car.unitsInStock}}</td>
 
     </tr>
 </table>
