--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,4 +1,21 @@
 <table class="table"> 
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>BrandId</th>
+            <th>ColorId</th>
+            <th>CarName</th>
+            <th>ModelYear</th>
+            <th>Daily Price</th>
+            <th>Description</th>
+            <th>Units In Stock</th>
+
+            
+
+
+        </tr>
+
+    </thead>
     <tr *ngFor="let car of cars">
         <td>{{car.carId}}</td>
         <td>{{car.brandId}}</td>
