--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,6 +1,10 @@
 <ul class="list-group">
-    <li (click)="setCurrentBrand(brand)" *ngFor="let brand of brands"
-      [class]="getCurrentBrandClass(brand)">{{brand.brandName}}</li>
+  <li  [class]="getAllBrandClass()" routerLink="/cars"> Tum urunler</li>
+    <li (click)="setCurrentBrand(brand)" 
+    routerLink="/cars/brand/{{brand.brandId}}"
+    *ngFor="let brand of brands"
+      [class]="getCurrentBrandClass(brand)">
+      {{brand.brandName}}</li>
 
   </ul>
   
